--- a/app/css/style.css
+++ b/app/css/style.css
@@ -2,4 +2,39 @@ html {
   box-sizing: border-box; }
 
 body {
-  background: #272727; }
+  background: #272727;
+  border: 1px solid #272727;
+  color: white; }
+
+.container {
+  border: 1px solid red;
+  width: 80%;
+  margin: 30px auto; }
+
+.ballsLine {
+  border: 1px solid red;
+  display: flex;
+  justify-content: center; }
+
+.ballElement {
+  display: flex;
+  align-items: center; }
+
+.rope {
+  width: 20px;
+  height: 2px;
+  background: red; }
+
+.ball {
+  width: 50px;
+  height: 50px;
+  border: 1px solid red;
+  border-radius: 50%; }
+
+.controls {
+  border: 1px solid red;
+  display: flex;
+  justify-content: space-between; }
+
+.template {
+  display: none; }
