--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -18,10 +18,12 @@ body {
 	border: 1px solid red;
 	display: flex;
 	justify-content: center;
+	padding: 25px;
 }
 .ballElement {
 	display: flex;
 	align-items: center;
+	margin-left: 5px;
 }
 .rope {
 	width: 20px;
@@ -39,7 +41,20 @@ body {
 .controls {
 	border: 1px solid red;
 	display: flex;
-	justify-content: space-between;
+	justify-content: center;
+	margin-top: 50px;
+}
+.button {
+	border: 1px solid red;
+	width: 50px;
+	height: 50px;
+	border-radius: 5px;
+	line-height: 50px;
+	margin-left: 15px;
+	text-align: center;
+	font-size: 35px;
+	font-weight: bold;
+	cursor: pointer;
 }
 
 .template {
