--- a/app/css/style.css
+++ b/app/css/style.css
@@ -31,7 +31,8 @@ body {
   width: 50px;
   height: 50px;
   border: 1px solid red;
-  border-radius: 50%; }
+  border-radius: 50%;
+  position: relative; }
 
 .controls {
   border: 1px solid red;
@@ -49,7 +50,25 @@ body {
   text-align: center;
   font-size: 35px;
   font-weight: bold;
-  cursor: pointer; }
+  cursor: pointer;
+  user-select: none; }
 
 .template {
   display: none; }
+
+@keyframes flying {
+  0% {
+    top: 0; }
+  25% {
+    top: -7px; }
+  50% {
+    top: 0; }
+  75% {
+    top: 7px; }
+  100% {
+    top: 0; } }
+
+.flyingBallAnim {
+  animation: flying 6s cubic-bezier(0.3, 0.72, 0.85, 0.79) infinite; }
+  .flyingBallAnim.even {
+    animation-direction: reverse; }
