--- a/app/css/style.css
+++ b/app/css/style.css
@@ -28,9 +28,8 @@ body {
   background: red; }
 
 .ball {
-  width: 50px;
-  height: 50px;
-  border: 1px solid red;
+  width: 100px;
+  height: 100px;
   border-radius: 50%;
   position: relative; }
 
@@ -60,11 +59,11 @@ body {
   0% {
     top: 0; }
   25% {
-    top: -7px; }
+    top: -12px; }
   50% {
     top: 0; }
   75% {
-    top: 7px; }
+    top: 12px; }
   100% {
     top: 0; } }
 
@@ -72,3 +71,15 @@ body {
   animation: flying 6s cubic-bezier(0.3, 0.72, 0.85, 0.79) infinite; }
   .flyingBallAnim.even {
     animation-direction: reverse; }
+
+.crimson {
+  background: crimson; }
+
+.yellow {
+  background: yellow; }
+
+.green {
+  background: green; }
+
+.purple {
+  background: purple; }
