--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -31,9 +31,8 @@ body {
 	background: red;
 }
 .ball {
-	width: 50px;
-	height: 50px;
-	border: 1px solid red;
+	width: 100px;
+	height: 100px;
 	border-radius: 50%;
 	position: relative;
 }
@@ -68,13 +67,13 @@ body {
 		top: 0;
 	}
 	25% {
-		top: -7px;
+		top: -12px;
 	}
 	50% {
 		top: 0;
 	}
 	75% {
-		top: 7px;
+		top: 12px;
 	}
 	100% {
 		top: 0;
@@ -86,4 +85,17 @@ body {
 	&.even {
 		animation-direction: reverse;
 	}
+}
+
+.crimson {
+	background: crimson;
+}
+.yellow {
+	background: yellow;
+}
+.green {
+	background: green;
+}
+.purple {
+	background: purple;
 }
